# pyrust

./: README.txt  doubles.py  pyproject.toml
pyext-myrustlib/: Cargo.toml
pyext-myrustlib/src/: lib.rs
