[tool.poetry]
name = "pyrust"
version = "0.1.0"
description = ""
authors = ["nathandbrowne <nathan.browne1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.1"
pytest-benchmark = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
